syntax = "proto3";
package app;

service PostAppService {
  rpc PostTitle(TitleRequest) returns (TitleReply) {}
}

message TitleRequest {
  string title = 1;
}

message TitleReply {
  string title = 1;
}
